5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4061/executions/1602_1017.log
== TEST (2019-03-31 20:12:46) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
import math

lat1 = radians(float(input("Latitude de P1: ")))
long1 = radians(float(input("longitude de P1: ")))
#---------------------------------------------
lat1 = radians(float(input("Latitude de P2: ")))
long1 = radians(float(input("longitude de P2: ")))

r = float(6371.01)

angulo = r.acos((sin(lat1)*sin(lat2))+(cos(lat1)*cos(lat2)*cos(long1-long2)))
print(lat1)
print(long1)
print(lat2)
print(long2)
print("-----------------")
print(round(angulo,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    lat1 = radians(float(input()))
NameError: name 'radians' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 20:13:55) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
import math

lat1 = math.radians(float(input("Latitude de P1: ")))
long1 = math.radians(float(input("longitude de P1: ")))
#---------------------------------------------
lat1 = radians(float(input("Latitude de P2: ")))
long1 = radians(float(input("longitude de P2: ")))

r = float(6371.01)

angulo = r.acos((sin(lat1)*sin(lat2))+(cos(lat1)*cos(lat2)*cos(long1-long2)))
print(lat1)
print(long1)
print(lat2)
print(long2)
print("-----------------")
print(round(angulo,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    lat1 = radians(float(input()))
NameError: name 'radians' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 20:14:58) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
import math

lat1 = math.radians(float(input("Latitude de P1: ")))
long1 = math.radians(float(input("longitude de P1: ")))
#---------------------------------------------
lat1 = math.radians(float(input("Latitude de P2: ")))
long1 = math.radians(float(input("longitude de P2: ")))

r = float(6371.01)

angulo = r.acos((math.sin(lat1)*math.sin(lat2))+(math.cos(lat1)*math.cos(lat2)*math.cos(long1-long2)))
print(lat1)
print(long1)
print(lat2)
print(long2)
print("-----------------")
print(round(angulo,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    angulo = r.acos((math.sin(lat1)*math.sin(lat2))+(math.cos(lat1)*math.cos(lat2)*math.cos(long1-long2)))
AttributeError: 'float' object has no attribute 'acos'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 20:15:55) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
import math

lat1 = math.radians(float(input("Latitude de P1: ")))
long1 = math.radians(float(input("longitude de P1: ")))
#---------------------------------------------
lat1 = math.radians(float(input("Latitude de P2: ")))
long1 = math.radians(float(input("longitude de P2: ")))

r = float(6371.01)

print(lat1)
print(long1)
print(lat2)
print(long2)
print("-----------------")
angulo = r.acos((math.sin(lat1)*math.sin(lat2))+(math.cos(lat1)*math.cos(lat2)*math.cos(long1-long2)))
print(round(angulo,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    print(lat2)
NameError: name 'lat2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 20:17:04) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
import math

lat1 = math.radians(float(input("Latitude de P1: ")))
long1 = math.radians(float(input("longitude de P1: ")))
#---------------------------------------------
lat2 = math.radians(float(input("Latitude de P2: ")))
long2 = math.radians(float(input("longitude de P2: ")))

r = float(6371.01)

print(lat1)
print(long1)
print(lat2)
print(long2)
print("-----------------")
angulo = r.acos((math.sin(lat1)*math.sin(lat2))+(math.cos(lat1)*math.cos(lat2)*math.cos(long1-long2)))
print(round(angulo,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 19, in <module>
    angulo = r.acos((math.sin(lat1)*math.sin(lat2))+(math.cos(lat1)*math.cos(lat2)*math.cos(long1-long2)))
AttributeError: 'float' object has no attribute 'acos'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 20:17:59) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
import math

lat1 = math.radians(float(input("Latitude de P1: ")))
long1 = math.radians(float(input("longitude de P1: ")))
#---------------------------------------------
lat2 = math.radians(float(input("Latitude de P2: ")))
long2 = math.radians(float(input("longitude de P2: ")))

r = float(6371.01)

print(lat1)
print(long1)
print(lat2)
print(long2)
print("-----------------")
angulo = r*(math.acos((math.sin(lat1)*math.sin(lat2))+(math.cos(lat1)*math.cos(lat2)*math.cos(long1-long2))))
print(round(angulo,2))
-- OUTPUT:
-0.05299048247186796
-1.0479977846586372
-0.05390442413467479
-1.0401226845407134
-----------------
50.44
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 20:18:37) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
import math

lat1 = math.radians(float(input("Latitude de P1: ")))
long1 = math.radians(float(input("longitude de P1: ")))
#---------------------------------------------
lat2 = math.radians(float(input("Latitude de P2: ")))
long2 = math.radians(float(input("longitude de P2: ")))

r = float(6371.01)

print("-----------------")
angulo = r*(math.acos((math.sin(lat1)*math.sin(lat2))+(math.cos(lat1)*math.cos(lat2)*math.cos(long1-long2))))
print(round(angulo,2))
-- OUTPUT:
-----------------
50.44
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 20:19:46) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
import math

lat1 = math.radians(float(input("Latitude de P1: ")))
long1 = math.radians(float(input("longitude de P1: ")))
#---------------------------------------------
lat2 = math.radians(float(input("Latitude de P2: ")))
long2 = math.radians(float(input("longitude de P2: ")))

r = float(6371.01)

print("-----------------")
angulo = r*(math.acos((math.sin(lat1)*math.sin(lat2))+(math.cos(lat1)*math.cos(lat2)*math.cos(long1-long2))))
print(round(angulo,2))
-- EXECUTION TIME:
0.151777
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
-----------------
50.44
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 20:19:55) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
import math

lat1 = math.radians(float(input("Latitude de P1: ")))
long1 = math.radians(float(input("longitude de P1: ")))
#---------------------------------------------
lat2 = math.radians(float(input("Latitude de P2: ")))
long2 = math.radians(float(input("longitude de P2: ")))

r = float(6371.01)

print("-----------------")
angulo = r*(math.acos((math.sin(lat1)*math.sin(lat2))+(math.cos(lat1)*math.cos(lat2)*math.cos(long1-long2))))
print(round(angulo,2))
-- OUTPUT:
-----------------
50.44
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 20:20:54) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
import math

lat1 = math.radians(float(input("Latitude de P1: ")))
long1 = math.radians(float(input("longitude de P1: ")))
#---------------------------------------------
lat2 = math.radians(float(input("Latitude de P2: ")))
long2 = math.radians(float(input("longitude de P2: ")))

r = float(6371.01)

print("-----------------")
angulo = r*(math.acos((math.sin(lat1)*math.sin(lat2))+(math.cos(lat1)*math.cos(lat2)*math.cos(long1-long2))))
print(round(angulo,2))
-- EXECUTION TIME:
0.176514
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
-----------------
50.44
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 20:21:26) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
import math

lat1 = math.radians(float(input("Latitude de P1: ")))
long1 = math.radians(float(input("longitude de P1: ")))
#---------------------------------------------
lat2 = math.radians(float(input("Latitude de P2: ")))
long2 = math.radians(float(input("longitude de P2: ")))

r = float(6371.01)

angulo = r*(math.acos((math.sin(lat1)*math.sin(lat2))+(math.cos(lat1)*math.cos(lat2)*math.cos(long1-long2))))
print(round(angulo,2))
-- EXECUTION TIME:
0.146356
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
50.44
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
